--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firmly Planted</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div>
-        <div>
+    <div id="div1">
+        <div id="div2">
             <h1>Welcome to Firmly Planted</h1>
             <h2>search...</h2>
         </div>
