changed some colors and divs

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <title>Firmly Planted</title>
 
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="app.js"></script>
 </head>
 
 <body>
-    <div id="div1">
-        <div id="div2">
+    <div id="outer">
+        <div id="inner">
             <h1>Welcome to Firmly Planted</h1>
             <h2>search...</h2>
         </div>
-
+    <div id="nav">        
         <h3>Product Navigation</h3>
+    </div>
     </div>
 
 
