Separate elements into own divs and right-align search bar

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
 <body>
     <div id="outer">
-        <div id="inner">
+        <div id="titleBarDiv">
             <h1>Welcome to Firmly Planted</h1>
+        </div>
+        <div id="searchBarDiv">
             <h2>search...</h2>
         </div>
-    <div id="nav">        
-        <h3>Product Navigation</h3>
-    </div>
+        <div id="navBarDiv">
+            <h3>Product Navigation</h3>
+        </div>
     </div>
 
 
