Add images to index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         </div>
     </div>
 
+    <div class="products">
+        <div><img src="resources/images/plants/potted_succulents.jpg" alt="Succulent in a pot"></div>
+        <div><img src="resources/images/plants/succulent_in_hand.jpg" alt="A hand holding a succulent"></div>
+        <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+    </div>
 
 </body>
 
