Changed fonts and added some divs/spans

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div id="outer">
         <div id="titleBarDiv">
-            <h1>Welcome to Firmly Planted</h1>
+            <h1>Welcome to <span id="title">Firmly Planted</span></h1>
         </div>
         <div id="searchBarDiv">
             <h2>search...</h2>
