added allproducts html page

--- a/allProducts.html
+++ b/allProducts.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Firmly Planted</title>
-
+    <title>All Products</title>
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="app.js"></script>
 </head>
-
 <body>
     <div id="outer">
         <div id="titleBarDiv">
@@ -23,17 +20,6 @@
             <h3>Product Navigation</h3>
         </div>
     </div>
-
-    <div class="allProd">
-        <a href="allProducts.html">View all products</a>
-    </div>
-
-    <div class="products">
-        <div><img src="resources/images/plants/potted_succulents.jpg" alt="Succulent in a pot"></div>
-        <div><img src="resources/images/plants/succulent_in_hand.jpg" alt="A hand holding a succulent"></div>
-        <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
-    </div>
-
+    
 </body>
-
 </html>
