--- a/allProducts.html
+++ b/allProducts.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +9,11 @@
     <link rel="stylesheet" href="style.css">
     <script type="text/javascript" src="app.js"></script>
 </head>
+
 <body>
     <div id="outer">
         <div id="titleBarDiv">
-            <h1>Welcome to <span id="title">Firmly Planted</span></h1>
+            <h1>Welcome to <span id="title"><a href="index.html">Firmly Planted</a></span></h1>
         </div>
         <div id="searchBarDiv">
             <h2>search...</h2>
@@ -20,6 +22,35 @@
             <h3>Product Navigation</h3>
         </div>
     </div>
-    
+    <div class="productType">
+        Succulents
+        <div class="products">
+            <div><img src="resources/images/plants/potted_succulents.jpg" alt="Succulent in a pot"></div>
+            <div><img src="resources/images/plants/succulent_in_hand.jpg" alt="A hand holding a succulent"></div>
+            <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+            <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+        </div>
+    </div>
+    <div class="productType">
+        Trees
+        <div class="products">
+            <div><img src="resources/images/plants/potted_succulents.jpg" alt="Succulent in a pot"></div>
+            <div><img src="resources/images/plants/succulent_in_hand.jpg" alt="A hand holding a succulent"></div>
+            <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+            <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+        </div>
+    </div>
+    </div>
+    <div class="productType">
+        Cacti
+        <div class="products">
+            <div><img src="resources/images/plants/potted_succulents.jpg" alt="Succulent in a pot"></div>
+            <div><img src="resources/images/plants/succulent_in_hand.jpg" alt="A hand holding a succulent"></div>
+            <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+            <div><img src="resources/images/plants/succulent_on_table.jpg" alt="A succulent on a table"></div>
+        </div>
+    </div>
+
 </body>
+
 </html>
